# retrobot2

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/custom_cmds/: mod.rs
src/events/: mod.rs
src/events/commands/: mod.rs
src/events/commands/cmd_setup/: mod.rs
src/events/commands/cmds/: mod.rs
src/events/commands/cmds/acr_generator/: mod.rs
src/events/commands/cmds/acr_generator/dictionary/: a_list.rs  b_list.rs  c_list.rs  d_list.rs  e_list.rs  f_list.rs  g_list.rs  h_list.rs  i_list.rs  j_list.rs  k_list.rs  l_list.rs  m_list.rs  mod.rs  n_list.rs  o_list.rs  p_list.rs  q_list.rs  r_list.rs  s_list.rs  t_list.rs  u_list.rs  v_list.rs  w_list.rs  x_list.rs  y_list.rs  z_list.rs
src/events/commands/cmds/acr_generator/setup/: mod.rs
src/events/commands/cmds/arb_digest/: mod.rs
src/events/commands/cmds/arb_digest/setup/: mod.rs
src/events/commands/cmds/calc_ti_call/: mod.rs
src/events/commands/cmds/calc_ti_call/setup/: mod.rs
src/events/commands/cmds/custom_cmd/: mod.rs
src/events/commands/cmds/custom_cmd/cmd_add/: mod.rs
src/events/commands/cmds/custom_cmd/cmd_del/: mod.rs
src/events/commands/cmds/custom_cmd/cmd_list/: mod.rs
src/events/commands/cmds/custom_cmd/setup/: mod.rs
src/events/commands/cmds/direct_message/: mod.rs
src/events/commands/cmds/emoji_dump/: mod.rs
src/events/commands/cmds/msg_digest/: mod.rs
src/events/commands/cmds/say/: mod.rs
src/events/greets/: mod.rs
src/events/message/: mod.rs
src/events/message/cust_cmd_resp/: mod.rs
src/events/ready/: mod.rs
src/tools/: mod.rs
(+7 files in other folders)
